--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -15,6 +15,10 @@ spec:
   selector:
     matchLabels:
       app: terraform-enterprise
+  {{- with .Values.strategy }}
+  strategy:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   template:
     metadata:
       annotations:
