add optional kubeconfig configuration

--- a/templates/config-map.yaml
+++ b/templates/config-map.yaml
@@ -14,6 +14,9 @@ data:
   {{- if or .Values.agentWorkerPodTemplate .Values.openshift.enabled }}
   TFE_RUN_PIPELINE_KUBERNETES_POD_TEMPLATE: {{ include "k8s.addSecurityContext" . }}
   {{- end }}
+  {{- if .Values.kubeconfig }}
+  TFE_RUN_PIPELINE_KUBERNETES_KUBECONFIG_PATH: /etc/kubernetes/kubeconfig
+  {{- end }}
   {{- if .Values.openshift.enabled }}
   TFE_RUN_PIPELINE_KUBERNETES_OPEN_SHIFT_ENABLED: "true"
   {{- end }}
