--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -39,3 +39,21 @@ data:
 {{- if .Values.env.secretsFilePath }}
 {{- include "helpers.enc-b64-secrets-file" . | indent 2 }}
 {{- end }}
+
+{{- if .Values.kubeconfig }}
+{{- $clusterName := .Values.kubeconfig.clusterName }}
+{{- $apiServer := .Values.kubeconfig.apiServer }}
+{{- $caData := .Values.kubeconfig.caData }}
+{{- $token := .Values.kubeconfig.token }}
+{{- $namespace := .Values.kubeconfig.namespace | default "default" }}
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: terraform-enterprise-kubeconfig
+  namespace: {{ .Release.Namespace }}
+type: Opaque
+data:
+  kubeconfig: {{ b64enc (printf "apiVersion: v1\nkind: Config\nclusters:\n- cluster:\n    certificate-authority-data: %s\n    server: %s\n  name: %s\ncontexts:\n- context:\n    cluster: %s\n    namespace: %s\n    user: %s\n  name: %s-context\ncurrent-context: %s-context\nusers:\n- name: %s\n  user:\n    token: %s\n" $caData $apiServer $clusterName $clusterName $namespace $clusterName $clusterName $clusterName $clusterName $token) | quote }}
+{{- end }}
